nextcloud/deployment-nextcloud-doc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onlyoffice
  name: onlyoffice-doc
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlyoffice
  template:
    metadata:
      labels:
        app: onlyoffice
    spec:
      containers:
        - image: onlyoffice/documentserver:8.2.2
          imagePullPolicy: IfNotPresent
          name: documentserver
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 2Gi
            limits:
              cpu: 2
              memory: 4Gi
