nextcloud/Ingress-onlyoffice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice
  namespace: nextcloud
spec:
  ingressClassName: nginx
  rules:
    - host: onlyoffice.almothana.xyz
      http:
        paths:
          - backend:
              service:
                name: onlyoffice
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - onlyoffice.almothana.xyz
      secretName: almothana-xyz-tls
